<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chat Module</string>
    <string name="image_description">image</string>

    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_friends">Friends</string>
    <string name="email">Email</string>
    <string name="enter_email">Please enter email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="unexpected_error_occurred">An unexpected error occurred, please try again</string>
    <string name="retry">retry</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="not_have_account">Not have account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_new_account">Create new account</string>
    <string name="firebase">Firebase</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="confirm_password_mismatch">Confirm password mismatch</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="email_exist">Email exist</string>
    <string name="password_should_be_at_leas_6_characters">Password should be at least 6 characters</string>
    <string name="type_your_message">Type your message…</string>
    <string name="seenBy">seenBy</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="seen_by">seen by</string>
    <string name="error_occurred">Error occurred</string>
    <string name="sent">sent</string>
    <string name="logout">Logout</string>
    <string name="logout_failure">logout failed, please try again</string>
    <string name="sent_message_failed">Send message failed</string>
    <string name="fetching">Fetching…</string>
    <string name="active_now">Active now</string>
    <string name="offline">Offline</string>
    <string name="pick_image">Pick image</string>
    <string name="must_pick_one_image">Please pick atleast 1 image</string>
    <string name="uploading_task_inprogress">Uploading task inprogress</string>
    <string name="view_image_detail">View image</string>
    <string name="download">Download</string>
    <string name="you">You</string>
    <string name="you_have_sent">You have sent</string>
    <string name="has_sent">has sent</string>
    <string name="Has_sent">Has sent</string>
    <string name="an_image">an image</string>
    <string name="images">images</string>
    <string name="chat_room_not_found">Chat room not found</string>
    <string name="birthday">Birthday</string>
    <string name="none">None</string>
    <string name="phone">Phone</string>
    <string name="locating">Locating</string>
    <string name="no_conversation">No conversation</string>
    <string name="friend_info">Friend information</string>
    <string name="action_search">Search</string>
    <string name="submit">Submit</string>
    <string name="title_chat_bot">Chat bot</string>
    <string name="you_have_sent_an_emoji">You have sent an emoji</string>
    <string name="has_sent_an_emoji">has sent an emoji</string>
    <string name="uploading_task_in_progress">Uploading task in progress</string>
    <string name="chat_bot_error">Chat bot error</string>
    <string name="edit_profile">Edit profile</string>
    <string name="selected">selected</string>
    <string name="pick_avatar">Pick avatar</string>
    <string name="pick_cover">Pick cover</string>
    <string name="pick_address">Pick address</string>
    <string name="enter_address">Enter address</string>
    <string name="gps_title">GPS</string>
    <string name="gps_message">Enable GPS on your device to locate your current location automatically</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="auto_locate_failed">Auto locate failed</string>
    <string name="cannot_locate">Cannot locate</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="user_profile">User profile</string>
    <string name="you_have_sent_a_location">You have sent a location</string>
    <string name="has_sent_a_location">has sent a location</string>
    <string name="sorry_i_cant_do_this_without_your_permission">Xin lỗi, tôi không thể thực hiện tác vụ này nếu chưa được bạn ủy quyền</string>
    <string name="bot_cant_change_volume">Xin lỗi, tôi không thể tùy chỉnh được âm lượng trên thiết bị này</string>
    <string name="volume_value_invalid">Mức âm lượng không hợp lệ (0 – 100(%))</string>
    <string name="no_camera_flash">Thiết bị này không có đèn flash</string>
    <string name="camera_off">Đèn flash chưa được bật</string>
    <string name="camera_on">Đèn flash đã được bật</string>
    <string name="not_found">Không tìm thấy</string>
    <string name="in_contact">trong danh bạ</string>
    <string name="search_result_with_keyword">kết quả tìm kiếm với từ khóa</string>
    <string name="make_dial">Thiết lập quay số</string>
    <string name="make_call">Thiết lập cuộc gọi vào số</string>
    <string name="location_enabling">Định vị vị trí đang được thiết lập, vui lòng chờ trong giây lát</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification_turned_off">Notification turned off</string>
    <string name="notification_turned_on">Notification turned on</string>
    <string name="an_emoji">an emoji</string>
    <string name="a_location">a location</string>
    <string name="turn_off_notification">Turn off notification</string>
    <string name="seen">seen</string>
</resources>