<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/activity_padding">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/firebase_logo"
            android:scaleType="centerInside"
            android:contentDescription="@string/image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/firebase"
            android:textSize="@dimen/font_size_40dp"
            android:layout_marginBottom="60dp"/>

        <com.ttt.chat_module.common.custom_view.ClearableEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_18dp"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:textColorHint="@android:color/white"
            app:clearButtonDrawable="@drawable/ic_close"
            app:edtPadding="@dimen/edit_text_padding"
            app:edtIcon="@drawable/ic_user"
            app:edtBackground="@drawable/round_border_edit_text"/>

        <com.ttt.chat_module.common.custom_view.PasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_18dp"
            android:layout_marginBottom="40dp"
            android:textColorHint="@android:color/white"
            app:toggleButtonDrawable="@drawable/password_edit_text_view_button_drawable"
            app:edtPadding="@dimen/edit_text_padding"
            app:edtIcon="@drawable/ic_key"
            app:edtBackground="@drawable/round_border_edit_text"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/not_have_account"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/txt_create_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF3E85"
                android:text="@string/create_an_account"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>

