<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_account">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginEnd="@dimen/edit_text_padding"
            android:layout_marginRight="@dimen/edit_text_padding"
            android:src="@drawable/ic_mail_gray" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/img_email"
            android:layout_toEndOf="@id/img_email"
            android:layout_toRightOf="@id/img_email"
            android:ellipsize="end"
            android:lines="1"
            android:text="email@abc.xyz"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_16dp" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txt_email"
            android:layout_alignStart="@id/txt_email"
            android:layout_below="@id/txt_email"
            android:layout_marginBottom="@dimen/edit_text_padding"
            android:text="@string/email"
            android:textSize="@dimen/font_size_12dp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_email"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginEnd="@dimen/edit_text_padding"
            android:layout_marginRight="@dimen/edit_text_padding"
            android:src="@drawable/ic_phone_gray" />

        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/img_phone"
            android:layout_toEndOf="@id/img_phone"
            android:layout_toRightOf="@id/img_phone"
            android:ellipsize="end"
            android:lines="1"
            android:text="0123456789"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_16dp" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txt_phone"
            android:layout_alignStart="@id/txt_phone"
            android:layout_below="@id/txt_phone"
            android:layout_marginBottom="@dimen/edit_text_padding"
            android:text="@string/phone"
            android:textSize="@dimen/font_size_12dp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/img_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_phone"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginEnd="@dimen/edit_text_padding"
            android:layout_marginRight="@dimen/edit_text_padding"
            android:src="@drawable/ic_calendar_gray" />

        <TextView
            android:id="@+id/txt_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/img_birthday"
            android:layout_toEndOf="@id/img_birthday"
            android:layout_toRightOf="@id/img_birthday"
            android:ellipsize="end"
            android:lines="1"
            android:text="dd/MM/yyyy"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_16dp" />

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txt_birthday"
            android:layout_alignStart="@id/txt_birthday"
            android:layout_below="@id/txt_birthday"
            android:text="@string/birthday"
            android:textSize="@dimen/font_size_12dp"
            android:textStyle="italic" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>

